<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitleNTD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/currency_ntd"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ntd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/tvTitleNTD"
        app:layout_constraintTop_toTopOf="@+id/tvTitleNTD" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/common_go"
        app:layout_constraintStart_toStartOf="@+id/tvTitleNTD"
        app:layout_constraintTop_toBottomOf="@+id/ntd" />

    <TextView
        android:id="@+id/tvTitleJPY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/currency_jpy"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/tvTitleUSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/currency_usd"
        app:layout_constraintStart_toStartOf="@+id/tvTitleJPY"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleJPY" />

    <TextView
        android:id="@+id/tvValueJPY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/common_none"
        app:layout_constraintStart_toEndOf="@+id/tvTitleJPY"
        app:layout_constraintTop_toTopOf="@+id/tvTitleJPY" />

    <TextView
        android:id="@+id/tvValueUSD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/common_none"
        app:layout_constraintStart_toEndOf="@+id/tvTitleUSD"
        app:layout_constraintTop_toTopOf="@+id/tvTitleUSD" />
</android.support.constraint.ConstraintLayout>